+ Update readme + Update description on composer.json + Create palindrome code with its unit testing

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ianrizky/ianriizky-codinginterview",
-    "description": "Kumpulan source code dari pertanyaan atau tantangan yang sering muncul saat mengikuti proses coding interview",
+    "description": "Kumpulan source code dari pertanyaan atau studi kasus yang sering muncul saat mengikuti proses coding interview",
     "type": "project",
     "license": "MIT",
     "authors": [
