--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         }
     ],
     "minimum-stability": "stable",
+    "require": {
+        "php": "^8.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "symfony/var-dumper": "^5.2"
