build: bump version into v1.4.0

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "ianriizky/coding-interview",
     "description": "Kumpulan source code dari pertanyaan atau studi kasus yang sering muncul saat mengikuti proses coding interview",
+    "version": "1.4.0",
     "type": "project",
     "license": "MIT",
     "authors": [
